# haskell-des

./: .gitignore  DES.hs  LICENSE  Main.hs  Makefile  README.md  baby-des.cabal  des.hs  dsa.hs
