name:                baby-des
version:             0.1.0.0
synopsis:            Implementation of a DES-type cipher
homepage:            https://github.com/cjlarose/haskell-des
license:             BSD3
license-file:        LICENSE
author:              Chris LaRose
maintainer:          cjlarose@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.8

executable baby-des
  main-is:             Main.hs
  -- other-modules:       
  build-depends:       base ==4.5.*, bytestring ==0.9.*, crypto-api ==0.13.*
